\name{transcriptogramer-News}
\title{transcriptogramer News}
\encoding{UTF-8}

\section{Version 1.1.6}{
  \itemize{
    \item Improved GPL570 dataset.
  }
}

\section{Version 1.1.3}{
  \itemize{
    \item The datasets of the four species were updated to obtain a better clustering.
  }
}

\section{Version 1.0.0}{
  \itemize{
    \item Released at Bioconductor.
  }
}