@@ -2,20 +2,26 @@
 \title{transcriptogramer News}
 \encoding{UTF-8}
 
+\section{Version 1.1.7}{
+  \itemize{
+    \item Added a new argument to the differentiallyExpressed() method, supporting the limma-trend approach for RNA-Seq.
+  }
+}
+
 \section{Version 1.1.6}{
   \itemize{
-    \item Improved GPL570 dataset.
+    \item Updated GPL570 dataset.
   }
 }
 
 \section{Version 1.1.3}{
   \itemize{
-    \item The datasets of the four species were updated to obtain a better clustering.
+    \item The datasets of the four species were improved to obtain a better clustering.
   }
 }
 
 \section{Version 1.0.0}{
   \itemize{
-    \item Released at Bioconductor.
+    \item Released at Bioconductor [2017-10-31].
   }
 }
